<?xml version="1.0" encoding="utf-8"?>
<!--Name: Hsiu-Yuan Yang-->
<!--AndrewID: hsiuyuay-->
<!--Email: hsiuyuay@andrew.cmu.edu-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/welcomeMessage"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_centerHorizontal="true"
    android:layout_centerVertical="true"
    android:orientation="vertical">


    <TextView
        android:id="@+id/hello"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="20sp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/hello" />

    <!-- bored image from "https://www.freepik.com/free-vector/woman-getting-bored-during-coronavirus-quarantine-element-vector_24382767.htm#page=2&query=bored&position=48&from_view=search&track=sph">Image by rawpixel.com</a> on Freepik -->
    <ImageView
        android:id="@+id/boredImage"
        android:layout_width="match_parent"
        android:layout_height="170dp"
        app:srcCompat="@drawable/bored" />

    <TextView
        android:id="@+id/getUserName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/get_username" />

    <!-- Text to be entered by the user -->
    <EditText
        android:id="@+id/userName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@android:drawable/editbox_background"
        android:singleLine="true"
        android:textColor="#000" />

    <TextView
        android:id="@+id/getUserSelection"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/get_user_selection" />


    <RadioGroup
        android:id="@+id/options"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp">

        <RadioButton
            android:id="@+id/option1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/option1" />

        <RadioButton
            android:id="@+id/option2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp"
            android:text="@string/option2" />

        <!-- activity type dropdown-->
        <Spinner
            android:id="@+id/activityType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:spinnerMode="dropdown"
            android:visibility="invisible"
            android:enabled="false"
            android:prompt="@string/spinnerPrompt"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintEnd_toEndOf="@+id/option2"
            app:layout_constraintTop_toTopOf="@+id/option3" />

        <RadioButton
            android:id="@+id/option3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/option3" />

        <!-- set 10 as maximum value  -->
        <!-- set 1 as minimum value  -->
        <com.google.android.material.slider.Slider
            android:id="@+id/numParticipants"
            android:enabled="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:visibility="invisible"
            android:stepSize="1"
            android:value="1"
            android:valueFrom="1"
            android:valueTo="10" />

    </RadioGroup>

    <Button
        android:id="@+id/submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:text="Submit" />

    <TextView
        android:id="@+id/output"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="17dp"
        android:visibility="invisible"
        android:fontFamily="sans-serif"
        android:textColor="@color/blue"
        />

</LinearLayout>
